fixing paragraph in message alignment on vschedule. for muwm-3406

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -651,6 +651,7 @@ body {
         margin: 0;
         }
         i {padding-right: .5em;color:#85754d;}
+        p {display: inline-block; margin: 0px;}
     }
 
 
